docs/kubernetes/mid/RabbitMQ/config/rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8s.kuboard.cn/workload: rabbit
  labels:
    k8s.kuboard.cn/name: rabbit
  name: rabbit
  namespace: middleware
  resourceVersion: '14198113'
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s.kuboard.cn/name: rabbit
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s.kuboard.cn/name: rabbit
    spec:
      containers:
        - env:
            - name: RABBITMQ_MANAGEMENT_ALLOW_WEB_ACCESS
              value: 'true'
          image: 'bitnami/rabbitmq:latest'
          imagePullPolicy: IfNotPresent
          name: rabbit
          ports:
            - containerPort: 15672
              name: rabbit15672
              protocol: TCP
            - containerPort: 5672
              name: rabbit5672
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /bitnami
              name: rabbit-persistent-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: rabbit-persistent-storage

---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    k8s.kuboard.cn/name: rabbit
  name: rabbit
  namespace: middleware
  resourceVersion: '14195905'
spec:
  clusterIP: 10.101.138.204
  clusterIPs:
    - 10.101.138.204
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: 4nyyfx
      port: 15672
      protocol: TCP
      targetPort: 15672
  selector:
    k8s.kuboard.cn/name: rabbit
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels:
    k8s.kuboard.cn/name: rabbit
  name: rabbit
  namespace: middleware
  resourceVersion: '14196210'
spec:
  ingressClassName: mall-ingress-nginx
  rules:
    - host: rabbit.iuin.com
      http:
        paths:
          - backend:
              service:
                name: rabbit
                port:
                  number: 15672
            path: /
            pathType: Prefix
